interpreter/parser.output
Grammar

    0 $accept: program $end

    1 program: deflist

    2 deflist: %empty
    3        | deflist letdef
    4        | deflist typedef

    5 letdef: "let" muldef
    6       | "let" "rec" muldef

    7 muldef: def
    8       | muldef "and" def

    9 def: T_id mulpar '=' expr
   10    | T_id mulpar ':' type '=' expr
   11    | "mutable" T_id
   12    | "mutable" T_id ':' type
   13    | "mutable" T_id '[' mulexpr ']'
   14    | "mutable" T_id '[' mulexpr ']' ':' type

   15 mulpar: %empty
   16       | mulpar par

   17 mulexpr: expr
   18        | mulexpr ',' expr

   19 typedef: "type" multdef

   20 multdef: tdef
   21        | multdef "and" tdef

   22 tdef: T_id '=' mulconstr

   23 mulconstr: constr
   24          | mulconstr '|' constr

   25 constr: T_Id
   26       | T_Id "of" multype

   27 multype: type
   28        | multype type

   29 par: T_id
   30    | '(' T_id ':' type ')'

   31 type: "unit"
   32     | "int"
   33     | "char"
   34     | "bool"
   35     | "float"
   36     | T_id
   37     | '(' type ')'
   38     | type "ref"
   39     | type "->" type
   40     | "array" "of" type
   41     | "array" '[' muldim ']' "of" type

   42 muldim: '*'
   43       | muldim ',' '*'

   44 expr: expr '+' expr
   45     | expr '-' expr
   46     | expr "+." expr
   47     | expr "-." expr
   48     | expr '*' expr
   49     | expr "*." expr
   50     | expr '/' expr
   51     | expr "/." expr
   52     | expr "mod" expr
   53     | expr "**" expr
   54     | expr '=' expr
   55     | expr "<>" expr
   56     | expr '<' expr
   57     | expr '>' expr
   58     | expr "<=" expr
   59     | expr ">=" expr
   60     | expr "==" expr
   61     | expr "!=" expr
   62     | expr "&&" expr
   63     | expr "||" expr
   64     | expr ';' expr
   65     | expr ":=" expr
   66     | '+' expr
   67     | '-' expr
   68     | "+." expr
   69     | "-." expr
   70     | "not" expr
   71     | T_id mulexpr2
   72     | T_Id mulexpr2
   73     | letdef "in" expr
   74     | "dim" T_id
   75     | "dim" T_integer T_id
   76     | "new" type
   77     | "delete" expr
   78     | "begin" expr "end"
   79     | "if" expr "then" expr
   80     | "if" expr "then" expr "else" expr
   81     | "while" expr "do" expr "done"
   82     | "for" T_id '=' expr "to" expr "do" expr "done"
   83     | "for" T_id '=' expr "downto" expr "do" expr "done"
   84     | "match" expr "with" mulclause "end"
   85     | valexpr

   86 mulexpr2: valexpr
   87         | mulexpr2 valexpr

   88 valexpr: T_integer
   89        | T_real
   90        | T_character
   91        | T_string
   92        | "true"
   93        | "false"
   94        | '(' ')'
   95        | '(' expr ')'
   96        | T_id
   97        | T_Id
   98        | T_id '[' mulexpr ']'
   99        | '!' valexpr

  100 mulclause: clause
  101          | mulclause '|' clause

  102 clause: pattern "->" expr

  103 pattern: pattern1
  104        | T_Id mulpat

  105 pattern1: T_integer
  106         | '+' T_integer
  107         | '-' T_integer
  108         | T_real
  109         | "+." T_real
  110         | "-." T_real
  111         | T_character
  112         | "true"
  113         | "false"
  114         | T_id
  115         | '(' pattern ')'

  116 pattern2: pattern1
  117         | T_Id

  118 mulpat: %empty
  119       | mulpat pattern2


Terminals, with rules where they appear

$end (0) 0
'!' (33) 99
'(' (40) 30 37 94 95 115
')' (41) 30 37 94 95 115
'*' (42) 42 43 48
'+' (43) 44 66 106
',' (44) 18 43
'-' (45) 45 67 107
'/' (47) 50
':' (58) 10 12 14 30
';' (59) 64
'<' (60) 56
'=' (61) 9 10 22 54 82 83
'>' (62) 57
'[' (91) 13 14 41 98
']' (93) 13 14 41 98
'|' (124) 24 101
error (256)
"and" (258) 8 21
"array" (259) 40 41
"begin" (260) 78
"bool" (261) 34
"char" (262) 33
"delete" (263) 77
"dim" (264) 74 75
"do" (265) 81 82 83
"done" (266) 81 82 83
"downto" (267) 83
"else" (268) 80
"end" (269) 78 84
"false" (270) 93 113
"float" (271) 35
"for" (272) 82 83
"if" (273) 79 80
"in" (274) 73
"int" (275) 32
"let" (276) 5 6
"match" (277) 84
"mod" (278) 52
"mutable" (279) 11 12 13 14
"new" (280) 76
"not" (281) 70
"of" (282) 26 40 41
"rec" (283) 6
"ref" (284) 38
"then" (285) 79 80
"to" (286) 82
"true" (287) 92 112
"type" (288) 19
"unit" (289) 31
"while" (290) 81
"with" (291) 84
"->" (292) 39 102
"+." (293) 46 68 109
"-." (294) 47 69 110
"*." (295) 49
"/." (296) 51
"&&" (297) 62
"**" (298) 53
"||" (299) 63
"<>" (300) 55
"<=" (301) 58
">=" (302) 59
"==" (303) 60
"!=" (304) 61
":=" (305) 65
UNOP (306)
T_Id (307) 25 26 72 97 104 117
T_id (308) 9 10 11 12 13 14 22 29 30 36 71 74 75 82 83 96 98 114
T_integer (309) 75 88 105 106 107
T_real (310) 89 108 109 110
T_character (311) 90 111
T_string (312) 91


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
program (75)
    on left: 1, on right: 0
deflist (76)
    on left: 2 3 4, on right: 1 3 4
letdef (77)
    on left: 5 6, on right: 3 73
muldef (78)
    on left: 7 8, on right: 5 6 8
def (79)
    on left: 9 10 11 12 13 14, on right: 7 8
mulpar (80)
    on left: 15 16, on right: 9 10 16
mulexpr (81)
    on left: 17 18, on right: 13 14 18 98
typedef (82)
    on left: 19, on right: 4
multdef (83)
    on left: 20 21, on right: 19 21
tdef (84)
    on left: 22, on right: 20 21
mulconstr (85)
    on left: 23 24, on right: 22 24
constr (86)
    on left: 25 26, on right: 23 24
multype (87)
    on left: 27 28, on right: 26 28
par (88)
    on left: 29 30, on right: 16
type (89)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 10 12 14 27
    28 30 37 38 39 40 41 76
muldim (90)
    on left: 42 43, on right: 41 43
expr (91)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85, on right: 9 10 17 18 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 73 77 78 79 80
    81 82 83 84 95 102
mulexpr2 (92)
    on left: 86 87, on right: 71 72 87
valexpr (93)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99, on right: 85 86 87
    99
mulclause (94)
    on left: 100 101, on right: 84 101
clause (95)
    on left: 102, on right: 100 101
pattern (96)
    on left: 103 104, on right: 102 115
pattern1 (97)
    on left: 105 106 107 108 109 110 111 112 113 114 115, on right:
    103 116
pattern2 (98)
    on left: 116 117, on right: 119
mulpat (99)
    on left: 118 119, on right: 104 119


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (deflist)

    program  go to state 1
    deflist  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: deflist .
    3 deflist: deflist . letdef
    4        | deflist . typedef

    "let"   shift, and go to state 4
    "type"  shift, and go to state 5

    $default  reduce using rule 1 (program)

    letdef   go to state 6
    typedef  go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

    5 letdef: "let" . muldef
    6       | "let" . "rec" muldef

    "mutable"  shift, and go to state 8
    "rec"      shift, and go to state 9
    T_id       shift, and go to state 10

    muldef  go to state 11
    def     go to state 12


State 5

   19 typedef: "type" . multdef

    T_id  shift, and go to state 13

    multdef  go to state 14
    tdef     go to state 15


State 6

    3 deflist: deflist letdef .

    $default  reduce using rule 3 (deflist)


State 7

    4 deflist: deflist typedef .

    $default  reduce using rule 4 (deflist)


State 8

   11 def: "mutable" . T_id
   12    | "mutable" . T_id ':' type
   13    | "mutable" . T_id '[' mulexpr ']'
   14    | "mutable" . T_id '[' mulexpr ']' ':' type

    T_id  shift, and go to state 16


State 9

    6 letdef: "let" "rec" . muldef

    "mutable"  shift, and go to state 8
    T_id       shift, and go to state 10

    muldef  go to state 17
    def     go to state 12


State 10

    9 def: T_id . mulpar '=' expr
   10    | T_id . mulpar ':' type '=' expr

    $default  reduce using rule 15 (mulpar)

    mulpar  go to state 18


State 11

    5 letdef: "let" muldef .
    8 muldef: muldef . "and" def

    "and"  shift, and go to state 19

    $default  reduce using rule 5 (letdef)


State 12

    7 muldef: def .

    $default  reduce using rule 7 (muldef)


State 13

   22 tdef: T_id . '=' mulconstr

    '='  shift, and go to state 20


State 14

   19 typedef: "type" multdef .
   21 multdef: multdef . "and" tdef

    "and"  shift, and go to state 21

    $default  reduce using rule 19 (typedef)


State 15

   20 multdef: tdef .

    $default  reduce using rule 20 (multdef)


State 16

   11 def: "mutable" T_id .
   12    | "mutable" T_id . ':' type
   13    | "mutable" T_id . '[' mulexpr ']'
   14    | "mutable" T_id . '[' mulexpr ']' ':' type

    '['  shift, and go to state 22
    ':'  shift, and go to state 23

    $default  reduce using rule 11 (def)


State 17

    6 letdef: "let" "rec" muldef .
    8 muldef: muldef . "and" def

    "and"  shift, and go to state 19

    $default  reduce using rule 6 (letdef)


State 18

    9 def: T_id mulpar . '=' expr
   10    | T_id mulpar . ':' type '=' expr
   16 mulpar: mulpar . par

    '='   shift, and go to state 24
    T_id  shift, and go to state 25
    ':'   shift, and go to state 26
    '('   shift, and go to state 27

    par  go to state 28


State 19

    8 muldef: muldef "and" . def

    "mutable"  shift, and go to state 8
    T_id       shift, and go to state 10

    def  go to state 29


State 20

   22 tdef: T_id '=' . mulconstr

    T_Id  shift, and go to state 30

    mulconstr  go to state 31
    constr     go to state 32


State 21

   21 multdef: multdef "and" . tdef

    T_id  shift, and go to state 13

    tdef  go to state 33


State 22

   13 def: "mutable" T_id '[' . mulexpr ']'
   14    | "mutable" T_id '[' . mulexpr ']' ':' type

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    mulexpr  go to state 58
    expr     go to state 59
    valexpr  go to state 60


State 23

   12 def: "mutable" T_id ':' . type

    "array"  shift, and go to state 61
    "bool"   shift, and go to state 62
    "char"   shift, and go to state 63
    "float"  shift, and go to state 64
    "int"    shift, and go to state 65
    "unit"   shift, and go to state 66
    T_id     shift, and go to state 67
    '('      shift, and go to state 68

    type  go to state 69


State 24

    9 def: T_id mulpar '=' . expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 70
    valexpr  go to state 60


State 25

   29 par: T_id .

    $default  reduce using rule 29 (par)


State 26

   10 def: T_id mulpar ':' . type '=' expr

    "array"  shift, and go to state 61
    "bool"   shift, and go to state 62
    "char"   shift, and go to state 63
    "float"  shift, and go to state 64
    "int"    shift, and go to state 65
    "unit"   shift, and go to state 66
    T_id     shift, and go to state 67
    '('      shift, and go to state 68

    type  go to state 71


State 27

   30 par: '(' . T_id ':' type ')'

    T_id  shift, and go to state 72


State 28

   16 mulpar: mulpar par .

    $default  reduce using rule 16 (mulpar)


State 29

    8 muldef: muldef "and" def .

    $default  reduce using rule 8 (muldef)


State 30

   25 constr: T_Id .
   26       | T_Id . "of" multype

    "of"  shift, and go to state 73

    $default  reduce using rule 25 (constr)


State 31

   22 tdef: T_id '=' mulconstr .
   24 mulconstr: mulconstr . '|' constr

    '|'  shift, and go to state 74

    $default  reduce using rule 22 (tdef)


State 32

   23 mulconstr: constr .

    $default  reduce using rule 23 (mulconstr)


State 33

   21 multdef: multdef "and" tdef .

    $default  reduce using rule 21 (multdef)


State 34

   78 expr: "begin" . expr "end"

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 75
    valexpr  go to state 60


State 35

   77 expr: "delete" . expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 76
    valexpr  go to state 60


State 36

   74 expr: "dim" . T_id
   75     | "dim" . T_integer T_id

    T_id       shift, and go to state 77
    T_integer  shift, and go to state 78


State 37

   93 valexpr: "false" .

    $default  reduce using rule 93 (valexpr)


State 38

   82 expr: "for" . T_id '=' expr "to" expr "do" expr "done"
   83     | "for" . T_id '=' expr "downto" expr "do" expr "done"

    T_id  shift, and go to state 79


State 39

   79 expr: "if" . expr "then" expr
   80     | "if" . expr "then" expr "else" expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 80
    valexpr  go to state 60


State 40

   84 expr: "match" . expr "with" mulclause "end"

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 81
    valexpr  go to state 60


State 41

   76 expr: "new" . type

    "array"  shift, and go to state 61
    "bool"   shift, and go to state 62
    "char"   shift, and go to state 63
    "float"  shift, and go to state 64
    "int"    shift, and go to state 65
    "unit"   shift, and go to state 66
    T_id     shift, and go to state 67
    '('      shift, and go to state 68

    type  go to state 82


State 42

   70 expr: "not" . expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 83
    valexpr  go to state 60


State 43

   92 valexpr: "true" .

    $default  reduce using rule 92 (valexpr)


State 44

   81 expr: "while" . expr "do" expr "done"

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 84
    valexpr  go to state 60


State 45

   68 expr: "+." . expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 85
    valexpr  go to state 60


State 46

   69 expr: "-." . expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56

    letdef   go to state 57
    expr     go to state 86
    valexpr  go to state 60


State 47

   66 expr: '+' . expr

    "begin"      shift, and go to state 34
    "delete"     shift, and go to state 35
    "dim"        shift, and go to state 36
    "false"      shift, and go to state 37
    "for"        shift, and go to state 38
    "if"         shift, and go to state 39
    "let"        shift, and go to state 4
    "match"      shift, and go to state 40
    "new"        shift, and go to state 41
    "not"        shift, and go to state 42
    "true"       shift, and go to state 43
    "while"      shift, and go to state 44
    "+."         shift, and go to state 45
    "-."         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '!'          shift, and go to state 49
    T_Id         shift, and go to state 50
    T_id         shift, and go to state 51
    T_integer    shift, and go to state 52
    T_real       shift, and go to state 53
    T_character  shift, and go to state 54
    T_string     shift, and go to state 55
    '('          shift, and go to state 56
